--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script src="Bird.js"></script>
 <script src="Ground.js"></script>
 <script src="Box.js"></script>
+<script src="Box2.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
